--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 body {
-
+  font-family: "Poppins";
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -15,8 +15,12 @@ body {
   font-style: normal;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
 }
